# rospy-talk-sub

./: README.md
launch/: chatter.launch
src/listen/: CMakeLists.txt  package.xml  setup.py
src/listen/nodes/: listen.py
src/talk/: CMakeLists.txt  package.xml  setup.py
src/talk/nodes/: talk.py
